màn hình kiemr tra tra tài khoản vs lịch sử làm bài review các cau hỏi đúng và sai kèm theo giai thich cau hoi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,17 @@
         android:theme="@style/Theme.QuizzAppMB2">
 
         <activity
-            android:name=".LoginActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:name=".SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.NoActionBar"> <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
+
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
 
         <activity android:name=".MainActivity" android:exported="false" />
         <activity android:name=".RegisterActivity" android:exported="false" />
@@ -36,6 +40,7 @@
         <activity android:name=".CreateQuizActivity" android:exported="false" />
         <activity android:name=".ManageUsersActivity" android:exported="false" />
         <activity android:name=".LeaderboardActivity" android:exported="false" />
+        <activity android:name=".ReviewActivity" android:exported="false" />
 
     </application>
 
