--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".ManageUsersActivity" android:exported="false" />
         <activity android:name=".LeaderboardActivity" android:exported="false" />
         <activity android:name=".ReviewActivity" android:exported="false" />
+        <activity android:name=".ImportQuizActivity" android:exported="false" />
 
     </application>
 
